--- a/package.json
+++ b/package.json
@@ -36,5 +36,6 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
-  }
+  },
+  "homepage": "https://teyate.justabayet.com"
 }
